# backendecommerce/src/api/admin/pedido/[id]/route.ts
@@ -1,7 +1,4 @@
-import type { 
-    MedusaRequest, 
-    MedusaResponse,
-} from "@medusajs/medusa";
+import type { MedusaRequest, MedusaResponse } from "@medusajs/medusa";
 
 import PedidoService from "../../../../services/Pedido";
 import { Pedido } from "src/models/Pedido";
@@ -30,21 +27,18 @@ import { Pedido } from "src/models/Pedido";
  *         description: Pedido no encontrado
  */
 
-export const GET = async (
-    req: MedusaRequest,
-    res: MedusaResponse
-) => {
+export const GET = async (req: MedusaRequest, res: MedusaResponse) => {
     const pedidoService: PedidoService = req.scope.resolve("pedidoService");
     const { id } = req.params;
-    const enriquecido = req.query.enriquecido === 'true';
+    const enriquecido = req.query.enriquecido === "true";
     try {
-        const pedido = await pedidoService.recuperar(id,
-            {
-                skip: 0,
-                take: 20,
-                relations: enriquecido ? ["motorizado","direccion","usuario"] : []
-            }
-        );
+        const pedido = await pedidoService.recuperar(id, {
+            skip: 0,
+            take: 20,
+            relations: enriquecido
+                ? ["motorizado", "direccion", "usuario"]
+                : [],
+        });
         res.json({ pedido });
     } catch (error) {
         res.status(404).json({ error: "Pedido no encontrado" });
@@ -70,13 +64,13 @@ export const GET = async (
  *           type: boolean
  *         required: false
  *         description: Si se debe asignar un repartidor
- *        - in: query
- *          name: confirmar
- *          schema:
- *            type: boolean
- *          required: false
- *          description: Si se debe confirmar el pedido. No hace falta enviar el body
- * 
+ *       - in: query
+ *         name: confirmar
+ *         schema:
+ *           type: boolean
+ *         required: false
+ *         description: Si se debe confirmar el pedido. No hace falta enviar el body
+ *
  *     requestBody:
  *       required: true
  *       content:
@@ -122,15 +116,12 @@ export const GET = async (
  *                   example: No hay motorizados
  */
 
-export const PUT = async (
-    req: MedusaRequest,
-    res: MedusaResponse
-) => {
+export const PUT = async (req: MedusaRequest, res: MedusaResponse) => {
     const pedidoService: PedidoService = req.scope.resolve("pedidoService");
     const { id } = req.params;
     const pedidoData = req.body as Partial<Pedido>;
-    const asignarRepartidor = req.query.asignarRepartidor === 'true';
-    const confirmar = req.query.confirmar === 'true';
+    const asignarRepartidor = req.query.asignarRepartidor === "true";
+    const confirmar = req.query.confirmar === "true";
 
     if (confirmar) {
         try {
@@ -143,7 +134,11 @@ export const PUT = async (
     }
 
     try {
-        const pedido = await pedidoService.actualizar(id, pedidoData, asignarRepartidor);
+        const pedido = await pedidoService.actualizar(
+            id,
+            pedidoData,
+            asignarRepartidor
+        );
         res.json({ pedido });
     } catch (error) {
         // console.log(error);
@@ -151,10 +146,14 @@ export const PUT = async (
             res.status(404).json({ error: "Pedido no encontrado" });
         } else if (error.message === "No hay motorizados disponibles") {
             res.status(503).json({ error: "No hay motorizados" });
-        } else if (error.message == "No hay motorizados disponibles con suficiente stock"){
-            res.status(504).json({ error: "No hay motorizados disponibles con suficiente stock" });
-        }
-        else {
+        } else if (
+            error.message ==
+            "No hay motorizados disponibles con suficiente stock"
+        ) {
+            res.status(504).json({
+                error: "No hay motorizados disponibles con suficiente stock",
+            });
+        } else {
             res.status(400).json({ error: "Petición inválida" });
         }
     }
@@ -180,16 +179,16 @@ export const PUT = async (
  *         description: Pedido no encontrado
  */
 
-export const DELETE = async (
-    req: MedusaRequest,
-    res: MedusaResponse
-) => {
+export const DELETE = async (req: MedusaRequest, res: MedusaResponse) => {
     const pedidoService: PedidoService = req.scope.resolve("pedidoService");
     const { id } = req.params;
 
     try {
         const pedido = await pedidoService.eliminar(id);
-        res.status(200).json({ message: "Pedido eliminado exitosamente", pedido });
+        res.status(200).json({
+            message: "Pedido eliminado exitosamente",
+            pedido,
+        });
     } catch (error) {
         res.status(404).json({ error: "Pedido no encontrado" });
     }
